--- a/live_1/index.html
+++ b/live_1/index.html
@@ -34,12 +34,54 @@
 				</div>
 			</div>
 			<img src="img/girl1.png" alt="girl1.png" class="content-top-img__girl">
+			<img src="img/icons/ellipce3_big.png" alt="ellipce3_big.png" class="content-top-img__ellipce3big">
+			<img src="img/icons/ellipce1.png" alt="ellipce1.png" class="content-top-img__ellipce1">
+			<img src="img/icons/ellipce2.png" alt="ellipce2.png" class="content-top-img__ellipce2">
+			<svg class="content-top-img__ellipcesmall" width="22" height="22" viewBox="0 0 22 22" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<circle cx="11" cy="11" r="10" stroke="#1A2144" stroke-width="2" />
+			</svg>
+			<svg class="content-top-img__rectanglesmall" width="81" height="81" viewBox="0 0 81 81" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<rect x="30.0131" y="2.34131" width="56.6264" height="56.6264"
+					transform="rotate(29.2534 30.0131 2.34131)" stroke="#1A2144" stroke-width="2" />
+			</svg>
+			<svg class="content-top-img__vector1" width="131" height="123" viewBox="0 0 131 123" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M68.762 57.2933L126.752 74.5043L129.519 121.029L34.3574 90.9983L1.66121 29.9161L46.1483 2.19124L68.762 57.2933Z"
+					stroke="#1A2144" stroke-width="2" />
+			</svg>
+			<svg class="content-top-img__line1" width="117" height="11" viewBox="0 0 117 11" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M1.2251 9.72829C1.2251 9.72829 21.7548 0.0212531 35.5085 1.15743C45.8815 2.01433 50.3434 9.35426 60.745 9.72829C72.3858 10.1469 77.6674 0.989442 89.3145 1.15743C100.429 1.31773 116.456 9.72829 116.456 9.72829"
+					stroke="#1A2144" stroke-width="2" />
+			</svg>
+			<svg class="content-top-img__line2" width="117" height="11" viewBox="0 0 117 11" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M1.2251 9.72829C1.2251 9.72829 21.7548 0.0212531 35.5085 1.15743C45.8815 2.01433 50.3434 9.35426 60.745 9.72829C72.3858 10.1469 77.6674 0.989442 89.3145 1.15743C100.429 1.31773 116.456 9.72829 116.456 9.72829"
+					stroke="#1A2144" stroke-width="2" />
+			</svg>
+			<svg class="content-top-img__line3" width="117" height="11" viewBox="0 0 117 11" fill="none"
+				xmlns="http://www.w3.org/2000/svg">
+				<path
+					d="M1.2251 9.72829C1.2251 9.72829 21.7548 0.0212531 35.5085 1.15743C45.8815 2.01433 50.3434 9.35426 60.745 9.72829C72.3858 10.1469 77.6674 0.989442 89.3145 1.15743C100.429 1.31773 116.456 9.72829 116.456 9.72829"
+					stroke="#1A2144" stroke-width="2" />
+			</svg>
 		</div>
 	</div>
 	<div class="content-middle">
 		<h2>Leverage expert vetted consultants for mission critical business business operations</h2>
 		<p>Our team will hand select top qualified consultants within our network to ensure is completed <br>
 			with precision and efficiency.</p>
+		<div class="content-middle__vector1">
+			<svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<rect x="1.72217" y="14.439" width="25" height="25" transform="rotate(-30 1.72217 14.439)"
+					stroke="#1A2144" stroke-width="2" />
+			</svg>
+		</div>
 	</div>
 	<div class="content-middle-center">
 		<div class="content-middle__title">
@@ -55,6 +97,8 @@
 			<a target="_blank" href="http://google.com" class="content-middle-link__third">
 				<span>Consultant</span>
 			</a>
+			<div class="content-middle-link__border">
+			</div>
 		</div>
 		<div class="content-middle__icons">
 			<div class="content-middle-icon__1">
@@ -78,6 +122,43 @@
 						content-middle-icon__rectangle2></span>
 				<h3>Get a clear view <br> of the work</h3>
 				<p>Easily track project milestones and progress toward the completion of your jobs.</p>
+			</div>
+			<div class="content-middle-icon__vector1"><svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<circle cx="16" cy="16" r="15" stroke="#1A2144" stroke-width="2" />
+				</svg>
+			</div>
+			<div class="content-middle-icon__vector2"><svg width="44" height="14" viewBox="0 0 44 14" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<rect x="1" y="1" width="42" height="12" stroke="#1A2144" stroke-width="2" />
+				</svg>
+			</div>
+			<div class="content-middle-icon__vector3"><svg width="44" height="14" viewBox="0 0 44 14" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<rect x="1" y="1" width="42" height="12" stroke="#1A2144" stroke-width="2" />
+				</svg>
+			</div>
+			<div class="content-middle-icon__vector4"><svg width="19" height="19" viewBox="0 0 19 19" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<circle cx="9.5" cy="9.5" r="8.5" stroke="#1A2144" stroke-width="2" />
+				</svg>
+			</div>
+			<div class="content-middle-icon__vector5"><svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<path d="M11 2L19.6603 17H2.33975L11 2Z" stroke="#1A2144" stroke-width="2" />
+				</svg>
+			</div>
+			<div class="content-middle-icon__vector6"><svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<rect x="1" y="1" width="12" height="12" stroke="#1A2144" stroke-width="2" />
+				</svg>
+			</div>
+			<div class="content-middle-icon__vector7">
+				<div class="content-middle-icon__vector7border">
+					<svg width="45" height="45" viewBox="0 0 45 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<rect x="1" y="1" width="43" height="43" stroke="#1A2144" stroke-width="2" />
+					</svg>
+				</div>
 			</div>
 		</div>
 		<div class="content-middle-center-link">
