add small changes

--- a/live_1/index.html
+++ b/live_1/index.html
@@ -226,7 +226,7 @@
 			<a href="#"><img src="img/icons/linkedin.png" alt="linkedin.png" class="content-icon__linkedin"></a>
 			<a href="#"><img src="img/icons/twitter.png" alt="twitter.png" class="content-icon__twitter"></a>
 		</div>
-		<p>© 2020 UWW. All rights reserved</p>
+		<p>© 2020 UWW. All rights reserve</p>
 	</footer>
 </body>
 
